--- a/main.css
+++ b/main.css
@@ -1,5 +1,8 @@
+body {
+  background-color: #eeeeee;
+}
 .title{
-  background-image: url("themangoeffectbanner.png");
+  background-image:  ("themangoeffectbanner.png");
   text-align: center;
   text-shadow: 0px 0px 5px black;
 }
@@ -11,7 +14,6 @@
 iframe {
   text-align: center;
 }
-
 p{
   text-align: center;
 }
