--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
   text-shadow: 0px 0px 5px black;
 }
 .videotitle {
+  text-align: center;
   text-decoration-style: solid;
   text-shadow: 0px 0px 2px black;
 }
@@ -14,4 +15,10 @@ iframe {
 }
 p{
   text-align: center;
+}
+.videothumbnail{
+  position: absolute;
+  top: 0; right: 0;
+  bottom: 0; left: 0;
+  margin: auto;
 }
