--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@ p{
   bottom: 0; left: 0;
   margin: auto;
 }
-img {
-  text-align: center;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
