--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ p{
   bottom: 0; left: 0;
   margin: auto;
 }
-.center {
+.aligncenter {
   display: block;
   margin-left: auto;
   margin-right: auto;
