--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ html{
   color: white;
   font-family: "dameron";
   src: url("./dameron.tff");
+  text-shadow: 0px 0px 5px black;
 }
 .nav{
   text-decoration-style: solid;
