--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ html{
   text-shadow: 0px 0px 5px black;
   font-family: "dameron";
   src: url("./dameron.tff");
+  font-size: 25px
 }
 .nav {
   text-decoration-style: solid;
@@ -23,8 +24,8 @@ html{
 .nav a:hover {
   background-color: #eaeaea;
 }
-.active {
-  background-color: #0000ee;
+.nav .active {
+  background-color: #5aee5a;
 }
 body {
   background-color: #eeeeee;
@@ -44,6 +45,28 @@ body {
   margin-right: auto;
   width: 50%;
 }
+form{
+  text-align: center;
+  margin: 15px;
+}
+input[type=text], textarea{
+  width: 50%;
+  padding: 10px;
+  resize: vertical;
+  margin-top: 6px;
+  margin-bottom: 5px;
+  border: 1px solid #000;
+}
+input[type=submit]{
+  background-color: #50cc50;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+input[type=submit]:hover{
+  background-color: #50bb50;
+}
+
 footer{
   padding: 1px 25px;
   background-color: #dddddd;
