--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ html{
   padding: 10px 16px;
   overflow:auto;
   border-radius: 10px;
+  text-shadow: 0px 0px 10px black;
 }
 .nav a {
   float: left;
@@ -38,7 +39,7 @@ body {
   margin-right: auto;
 }
 .blogpost{
-  background-color: #cccc;
+  background-color: #bbbb;
   padding: 5px;
   border-radius: 25px;
   width: 70%;
@@ -46,6 +47,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 25px;
+  text-shadow: 0px 0px 7px black;
+  color: white;
 }
 .blogposttitle{
   float:left;
