--- a/main.css
+++ b/main.css
@@ -47,8 +47,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 25px;
-  text-shadow: 0px 0px 7px black;
-  color: white;
 }
 .blogposttitle{
   float:left;
@@ -62,8 +60,7 @@ body {
 }
 .blogpostpost{
   float:none;
-  text-align: left;
-  padding-top:50px;
+  text-align: center;
 }
 footer{
   padding: 1px 25px;
