--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 25px;
+  box-shadow: 0px 1px 5px black;
 }
 .blogposttitle{
   float:left;
