--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ html{
   overflow:auto;
   border-radius: 10px;
   text-shadow: 0px 0px 10px black;
+  box-shadow: 0px 1.5px 3px black;
 }
 .nav a {
   float: left;
@@ -16,6 +17,7 @@ html{
   background-color: #55550530;
   color: #fff;
   border-radius: 7px;
+  box-shadow: 0px 1px 2px black;
 }
 .nav a:hover {
   background-color: #55a055aa;
