--- a/main.css
+++ b/main.css
@@ -11,6 +11,9 @@ html{
   text-shadow: 0px 0px 10px black;
   box-shadow: 0px 1.5px 3px black;
 }
+.nav .alignright{
+  float:right;
+}
 .nav a {
   float: left;
   padding: 5px 15px;
